# Claimly

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/src/claim_agent/: api.py  cli.py  config.py  ingest.py  model.py
backend/src/claim_agent/agents/: analyzer.py
backend/src/claim_agent/tools/: __init__.py  cardbrain.py  n8n_email.py
backend/tests/: test_ingest.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/components/: chat.tsx  file-preview.tsx  input-bar.tsx  message-list.tsx
n8n/: gmail_to_agent.json
